<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.timur.assignment1task2b.MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:background="@color/background_left"></LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:background="@color/background_right"></LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:id="@+id/imageView"
            android:src="@mipmap/mike" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/person_name"
            android:id="@+id/textView"
            android:padding="10dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#95ffffff"
            android:nestedScrollingEnabled="false"
            android:paddingTop="15dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/programming_proficiency"
                android:id="@+id/textView2"
                android:paddingBottom="10dp"
                android:textColor="@color/abc_secondary_text_material_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/programming_proficiency_text"
                android:id="@+id/textView3"
                android:layout_toRightOf="@+id/textView2"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/personality"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView2"
                android:textColor="@color/abc_secondary_text_material_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/personality_text"
                android:id="@+id/textView5"
                android:layout_toRightOf="@+id/textView2"
                android:layout_alignTop="@+id/textView4"
                android:textColor="@android:color/primary_text_light" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
